yaml_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: nginx
    name: nginx-deployment
spec:
    replicas: 1
    selector:
        matchlabels:
            app: nginx
        spec:
            containers:
            - image: nginx
              name: nginx
